--- a/.github/workflows/beam_PreCommit_PythonDocs.yml
+++ b/.github/workflows/beam_PreCommit_PythonDocs.yml
@@ -82,7 +82,7 @@ jobs:
         uses: ./.github/actions/setup-environment-action
         with:
           java-version: default
-          python-version: default
+          python-version: 3.8
       - name: run pythonDocsPreCommit script
         uses: ./.github/actions/gradle-command-self-hosted-action
         with:
